# watcher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  shell.nix  test-product.json  test-setup.sh  tsconfig.json  vitest.config.ts
.direnv/: nix-profile-.808723.b1b329146965  nix-profile-.808723.b1b329146965.rc
config/: default.toml
migrations/: 001_initial.sql  002_indexes.sql  003_notifications.sql
prisma/: schema.prisma
scripts/: migrate-from-prisma.ts
src/: config.rs  element_finder.rs  index.ts  lib.rs  main.rs  product_manager.rs  scheduler.rs  scraper.rs
src/config/: mod.rs
src/core/: database.ts  elementFinder.ts  filestore.ts  mod.rs  productManager.ts  scheduler.ts  scraper.ts  tracker.ts
src/models/: false_positive.rs  mod.rs  notification_config.rs  notification_log.rs  price_comparison.rs  price_history.rs  product.rs  source.rs  system_setting.rs
src/plugins/: PluginManager.ts  manager.rs  mod.rs
src/plugins/base/: NotifierPlugin.ts  TrackerPlugin.ts
src/plugins/notifiers/: DiscordNotifier.ts  EmailNotifier.ts  discord.rs  email.rs  mod.rs
src/plugins/trackers/: NumberTracker.ts  PriceTracker.ts  VersionTracker.ts  mod.rs  number.rs  price.rs  version.rs
src/plugins/traits/: mod.rs  notifier.rs  tracker.rs
src/types/: models.ts
src/utils/: config.ts  error.rs  logger.ts  mod.rs
src/web/: handlers.rs  middleware.rs  mod.rs  responses.rs  server.ts
src/web/routes/: actions.ts  products.ts  scanner.ts  setup.ts  sources.ts
static/css/: style.css
static/js/: app.js
templates/: base.html  dashboard.html  products.html  scheduler.html  settings.html  setup.html
tests/: integration_tests.rs  setup.ts
tests/integration/: api_tests.rs  mod.rs  product_lifecycle_tests.rs  scheduler_tests.rs  web_interface_tests.rs
tests/mocks/: index.ts
tests/unit/: productManager.test.ts  scraper.test.ts  simple.test.ts
tests/unit/builders/: ProductTestBuilder.ts  WebScraperTestBuilder.ts
tests/unit/plugins/: emailNotifier.test.ts  priceTracker.test.ts
