[package]
name = "uatu-watcher"
version = "0.1.0"
edition = "2021"
authors = ["Haoran Un <haoransblue@gmail.com>"]
description = "Price/version/number tracking application"
license = "GPLv3"
repository = "https://github.com/yourusername/uatu-watcher"
readme = "README.md"
keywords = ["price-tracking", "web-scraping", "notifications", "monitoring"]
categories = ["web-programming", "command-line-utilities"]

[dependencies]
# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
tokio-cron-scheduler = "0.10"
async-trait = "0.1"
futures = "0.3"

# Web framework and HTTP
axum = { version = "0.7", features = ["macros", "tower-log"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Web scraping and HTML parsing
headless_chrome = "1.0"
scraper = "0.18"
url = "2.5"

# HTTP client for notifications
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }


# Templating and static files
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Security and validation
argon2 = "0.5"
jsonwebtoken = "9.2"
validator = { version = "0.18", features = ["derive"] }

# Email support
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }
email-encoding = "0.2"

# Currency and number parsing
rust_decimal = { version = "1.33", features = ["serde-float"] }
regex = "1.10"

# Image processing (for screenshots)
image = { version = "0.24", features = ["png", "jpeg"] }
base64 = "0.22"

# Retry logic
tokio-retry = "0.3"

# Performance monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

[dev-dependencies]
# Testing
tokio-test = "0.4"
rstest = "0.18"
mockall = "0.12"
wiremock = "0.5"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Database testing helpers
tempfile = "3.8"

[build-dependencies]
# For embedding assets
rust-embed = "8.2"

[[bin]]
name = "uatu-watcher"
path = "src/main.rs"

[lib]
name = "uatu_watcher"
path = "src/lib.rs"

# Benchmarks will be added later
# [[bench]]
# name = "parser_bench"
# harness = false

# [[bench]]
# name = "scraper_bench"  
# harness = false

[profile.release]
# Optimize for performance and size
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true
incremental = true

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]